@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-25T01:24:14Z",
-  "count_outdated" : 1456,
-  "uniques_outdated" : 976,
+  "timestamp" : "2025-12-02T01:26:12Z",
+  "count_outdated" : 1457,
+  "uniques_outdated" : 977,
   "count" : 1458,
   "uniques" : 978,
   "clones" : [
-    {
-      "timestamp": "2025-11-17T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-11-24T00:00:00Z",
       "count": 1,
